# tanca

./: .gitignore  README.md  meson.build
assets/interfaces/: client1.txt  client_by_name.txt  client_server_manager.txt  server1.txt
assets/interfaces/client/: connected.txt  credentials_popup.txt  server.txt  server_manager.txt  servers_list.txt  welcome.txt
assets/interfaces/server/: edit_save_popup.txt  new_save_popup.txt  running.txt  server_manager_popup.txt  setup.txt  started.txt
src/: client.cpp  client.hpp  meson.build  messages.hpp  server.cpp  server.hpp  server_manager.cpp  server_manager.hpp  utils.hpp
src/client/: client.cpp  client.hpp
src/server/: meson.build  saves_manager.cpp  saves_manager.hpp  server.cpp  server.hpp
src/server_manager/: meson.build  server_manager.cpp  server_manager.hpp
subprojects/: collection.wrap  nets.wrap  tgui.wrap
